[package]
name = "qfall-tools"
version = "0.1.0"
edition = "2021"
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flint-sys = "0.7.3"
sha2 = "0.10.6"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
typetag = "0.2"
criterion = { version = "0.8", features = ["html_reports"] }

[profile.bench]
debug = true

[[bench]]
name = "benchmarks"
harness = false
