[package]
name = "qfall-tools"
version = "0.1.0"
edition = "2024"
rust-version = "1.85" # due to rand and rand_distr dependency
description = "Common sub-modules and procedures in lattice-based constructions"
readme = "README.md"
homepage = "https://qfall.github.io"
repository = "https://github.com/qfall/tools"
license = "MPL-2.0"
keywords = ["prototype", "lattice", "cryptography"]
categories = ["cryptography", "mathematics", "development-tools::build-utils", "development-tools::testing", "development-tools::profiling"]
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qfall-math = { git = "https://github.com/qfall/math", branch = "dev" }
flint-sys = "0.7"
sha2 = "0"
serde = {version="1", features=["derive"]}
serde_json = "1"
typetag = "0"
criterion = { version = "0.8", features = ["html_reports"] }

[profile.bench]
debug = true

[[bench]]
name = "benchmarks"
harness = false
